-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.10.0 Beta2, 6.11.0 FF
-
None
-
-
de4bcdc02 (dev), e24b8facd (6.10)
-
2025wk32s2QtforAndroid
Hi,
Since https://codereview.qt-project.org/c/qt/qtbase/+/661741
Android application does not start without accessibility feature configured.
Is not guarded with
#if QT_CONFIG(accessibility)
Leading to error
E/AndroidRuntime: java.lang.UnsatisfiedLinkError: No implementation found for void org.qtproject.qt.android.QtNativeAccessibility.setActive(boolean)
For Gerrit Dashboard: QTBUG-138894 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
665642,3 | Android: fix crash with -no-accessibility and a11y enabled on-device | dev | qt/qtbase | Status: MERGED | +2 | 0 |
667269,2 | Android: fix crash with -no-accessibility and a11y enabled on-device | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |